# pr-review-bot-azure-devops

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
app/: auth.py  dependencies.py  main.py
app/agents/: models.py  sub_agents.py
app/mcp/: __init__.py  azure_devops_server.py
app/models/: README.md  agents.py  review_models.py  webhooks.py
app/models/azure_devops/: base_models.py  comment_thread_models.py  enums.py  git_models.py  pull_request_models.py
app/observability/: README.md  Review Agents.json  observability.py
app/prompts/: README.md  core.py  errors.py  markdown_reviewer.py  python_reviewer.py  sql_reviewer.py
app/routers/: pull_requests.py  webhooks.py
app/rules/: README.md  __init__.py  markdown_rules.json  python_rules.json  sql_rules.json
devops/: README.md  build-deploy-api.yaml
devops/build_agent/: azp-agent-linux.dockerfile
docs/: architecture.md  observability.md  usage-guide.md
tests/: README.md  base.py  conftest.py  test_auth.py  test_dependencies.py
tests/evals/: dataset_loader.py  evaluators.py  test_evals.py
tests/evals/datasets/: python_rules.yaml  review_tone_accuracy.yaml
tests/evals/fixtures/python/: hardcoded_api_key.py  missing_annotations.py  needs_output_model.py  no_docstring.py  no_error_handling.py  no_input_validation.py  prints_in_code.py
tests/routers/: test_webhooks.py
tests/rules/: test_rules.py
